--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sweetalert2": "^11.7.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://Bumboobee.github.io/the-athomo-financial-control",
+  "homepage": "https://the-athomo-financial-control.vercel.app/",
   "scripts": {
     "start": "react-scripts start",
     "predeploy" : "npm run build",
